resources/css/style.css
html {
  font-size: 16px;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 0.02em solid seashell;
  background-color: white;
/*  position: fixed;*/
  width: 100%;
  height: 4rem;
  z-index: 1;
}

.logo {
  height: 3.3rem;
  width: auto;
  margin-left: 1.5rem;
  margin-right: 0.5rem;
}

header div {
  /*border: 0.2em solid red;*/
  padding-right: 1rem;
}

.flex {
  display: flex;
}

header span {
  display: flex;
  align-items: center;
}

nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
}

nav ul li {
  margin: 0 1rem;
}

header a {
  text-decoration: none;
  font-family: Arial, sans-serif;
  font-size: 1.15rem;
  color: #4E4E4E;
}

#logo-dark {
  font-size: 1.65rem;
  font-family: Arial, sans-serif;
  font-weight: 700;
  letter-spacing: 0.5px;
  color: #4a4a4a;
  margin-right: 0.1rem;
}

#logo-light {
  font-size: 1.65rem;
  font-family: Arial, sans-serif;
  font-weight: 100;
  letter-spacing: 0.5px;
  color: #9b9b9b;
}

/*.main-block {
    display: flex;
    margin: 0 auto 5rem auto;
    padding-top: 3.6rem;
    border: 0.3em solid purple;
}*/

.banner {
  background-color: #d8d8d8;
  width: 100%;
  display: flex;
  margin: 0 auto;

}

.image-section {
  border: 0.2em solid red;
  width: 60%;
}

.text-section {
  border: 0.2em solid green;
  width: 38%;
}

.text-content {
  margin-top: 4.7rem;
  border: 0.2em dotted yellow;

}

.banner img {
  width: 90%;
  margin: 2rem 2.5rem 2rem 1.5rem;
}

.button-section {
    width: 75%;
    border: 0.2em solid green;
}

.button {
    background-color: #4a4a4a;
    font-family: Arial, sans-serif;
    color: white;
    font-weight: lighter;
    text-align: center;
    letter-spacing: 1px;
    max-width: 18rem;
    padding: 0.8rem;
}

.text-content h1 {
  color: #4a4a4a;
  font-family: Arial, sans-serif;
  font-size: 2.8rem;
}

.text-content p {
  color: #4a4a4a;
  font-family: Arial, sans-serif;
  font-size: 1.5rem;
}

.section-2 {
  display: flex;
  border: 0.2em dashed brown;
}

.section-row {
  display: flex;
  justify-content: space-between;
  border: 0.2em solid orange;
}

.section-2-left {
  width: 60%;
  margin: 2rem 1.5rem;
  /*border-right: 0.15rem solid #d8d8d8;*/
/*  border: 0.2em solid yellow;*/
}

.section-2-right {
  width: 40%;
  border-left: 0.15rem solid #d8d8d8;
}

.section-2-left img {
  width: 94%;
}

/*.right-side-img {
  width: 35%;
  border: 0.2em dotted pink;
}*/

.right-side-text {
  width: 100%;
  margin: 1rem 1rem 1rem 0rem;
  border: 0.2em solid gray;
  padding-top: 0;
}

.right-side-img img {
  width: 80%;
  margin: 1rem;
}

.section-3 {
  background-color: #d8d8d8;
}

.section-3 h1 {
  padding-top: 2rem;
  text-align: center;
}

.six-images {
  width: 90%;
  border: 0.2em dashed purple;
  margin: 0 auto;
  padding-bottom: 2rem;
}

.three-images-row {
  display: flex;
  width: 100%;
  justify-content: space-around;
  margin: 1rem 0;
}

.course-image {
  width: 30%;
  background-color: #ffffff;
}

.course-image img {
  width: 100%;
}

.section-4-left {
  width: 60%;
/*  margin: 2rem 1.5rem;*/
/*  border: 0.2em solid yellow;*/
}

.section-4-right {
  width: 40%;
  border-left: 0.15rem solid #d8d8d8;
}

.section-4-left video {
  width: 94%;
}

.secton-4-2-col {
  display: flex;
  border: 0.2em solid cadetblue;
}

#section-4-header {
  padding: 1rem;
  text-align: center;
}

